# notebook-transformer

./: .cursorrules  .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
config/: __init__.py  settings.py
docs/: MCP-MUSUBIX-SETUP.md  MCP-STITCH-SETUP.md  STITCH-ERROR-FIX.md  UI-DESIGN-SPEC.md  mcp-stitch.example.json  tasks-sprint.md
docs/stitch/: README.md  stitch-notebooklm-transformer-home.html  stitch-notebooklm-transformer-nordic.html  stitch-notebooklm-transformer-pipeline-updated.html
scripts/: enable-stitch-api.sh  verify-run.sh
src/: __init__.py  main.py  models.py
src/analyzer/: __init__.py  layout_analyzer.py
src/builder/: __init__.py  pptx_builder.py
src/extractor/: __init__.py  pdf_extractor.py
src/utils/: __init__.py  coordinate.py  image_processing.py
tests/: conftest.py  test_builder.py  test_coordinate.py  test_extractor.py  test_integration_errors.py  test_layout_analyzer.py  test_models.py  test_sample_pdf_integration.py
web/: README.md  next.config.ts  package-lock.json  package.json  playwright.config.ts
web/e2e/: home.spec.ts
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/app/api/convert/: route.ts
